--- a/main.css
+++ b/main.css
@@ -1,5 +1,6 @@
 body {
     font-family: 'Merriweather Sans', sans-serif;
+    overflow-x: hidden;
 }
 
 * {
@@ -22,6 +23,27 @@ body {
     color: white;
     text-align: center;
     height: 800px;
+}
+.display-ph{
+    width: 100%;
+    background-color:#2F3C7E;
+    color: white;
+    text-align: center;
+    padding: 20px;
+}
+@media (max-width: 576px) {
+    .right {
+        display: none;
+    }
+    .display-ph{
+        display: block;
+    }
+}
+@media (min-width: 576px) {
+
+    .display-ph{
+        display: none;
+    }
 }
 
 /* Clear floats after the columns */
@@ -94,7 +116,67 @@ footer{
 
 /* Timeline CSS. Reference: https://www.csscodelab.com/simple-horizontal-timeline-html-css/ */
 
-.timeline {
+body{
+    background:#eee;
+    margin-top:20px;
+}
+.hori-timeline .events {
+    border-top: 3px solid #e9ecef;
+}
+.hori-timeline .events .event-list {
+    display: block;
+    position: relative;
+    text-align: center;
+    padding-top: 70px;
+    margin-right: 0;
+}
+.hori-timeline .events .event-list:before {
+    content: "";
+    position: absolute;
+    height: 36px;
+    border-right: 2px dashed #dee2e6;
+    top: 0;
+}
+.hori-timeline .events .event-list .event-date {
+    position: absolute;
+    top: 38px;
+    left: 0;
+    right: 0;
+    width: 75px;
+    margin: 0 auto;
+    border-radius: 4px;
+    padding: 2px 4px;
+}
+@media (min-width: 1140px) {
+    .hori-timeline .events .event-list {
+        display: inline-block;
+        width: 24%;
+        padding-top: 45px;
+    }
+    .hori-timeline .events .event-list .event-date {
+        top: -12px;
+    }
+}
+.bg-soft-primary {
+    background-color: rgba(64,144,203,.3)!important;
+}
+.bg-soft-success {
+    background-color: rgba(71,189,154,.3)!important;
+}
+.bg-soft-danger {
+    background-color: rgba(231,76,94,.3)!important;
+}
+.bg-soft-warning {
+    background-color: rgba(249,213,112,.3)!important;
+}
+.card {
+    border: none;
+    margin-bottom: 24px;
+    -webkit-box-shadow: 0 0 13px 0 rgba(236,236,241,.44);
+    box-shadow: 0 0 13px 0 rgba(236,236,241,.44);
+}
+
+/* .timeline {
     width:800px;
     height: 20px;
     list-style: none;
@@ -179,10 +261,9 @@ footer{
     -ms-transform: translate(-50%, -100%);
     -o-transform: translate(-50%, -100%);
     transform: translate(-50%, -100%);
-}
+} */
 
-/* On smaller screens in assignment 2
-@media screen and (max-height: 450px) {
+@media screen and (max-height: 576px) {
     .sidebar {padding-top: 15px;}
     .sidebar a {font-size: 18px;}
-}*/
+}
