--- a/main.css
+++ b/main.css
@@ -6,6 +6,18 @@ body {
 * {
     box-sizing: border-box;
 }
+
+.skill-card:hover{
+    box-shadow: 0px 15px 26px rgba(0, 0, 0, 0.50);
+    width: 200px;
+    -webkit-transition: all 0.2s ease-in;
+    -moz-transition: all 0.2s ease-in;
+    -ms-transition: all 0.2s ease-in;
+    -o-transition: all 0.2s ease-in;
+    transition: all 0.2s ease-in;
+    transform: scale(1.1);
+}
+
 .column {
     float: left;
     padding: 10px;
